<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:id="@+id/lLTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_back"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#1F41BB"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_7sdp"
            android:gravity="center_vertical"
            android:text="@string/login_here"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lLTitle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    <LinearLayout
        android:id="@+id/lLItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/lLTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:textSize="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/login_description"/>

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:maxLines="1"
            android:inputType="text"
            android:background="@drawable/add_background"
            android:paddingStart="@dimen/_8sdp"
            android:hint="@string/enter_user_name"
            android:layout_marginTop="@dimen/_35sdp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/etUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/add_background"
            android:paddingStart="@dimen/_8sdp"
            android:singleLine="true"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/_15sdp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:textSize="@dimen/_18sdp"
        android:textAllCaps="false"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/lLItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>