<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DashBoardActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dashboard"
            android:textColor="#1F41BB"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivLogOut"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivLogOut"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/ic_logout"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/add_background"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:text="@string/user_name"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                android:singleLine="true"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:background="@null"
                android:maxLines="1"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:textSize="@dimen/_13sdp"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/add_background"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:singleLine="true"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/etName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:maxLines="1"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:textSize="@dimen/_13sdp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/add_background"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:text="@string/city"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/etCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:background="@null"
                android:maxLines="1"
                android:gravity="center_vertical"
                android:textSize="@dimen/_13sdp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/add_background"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:text="@string/phoneNo"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/etPhoneNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:background="@null"
                android:maxLines="1"
                android:gravity="center_vertical"
                android:textSize="@dimen/_13sdp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/add_background"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:text="@string/dashboard_password"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/etPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:background="@null"
                android:maxLines="1"
                android:gravity="center_vertical"
                android:textSize="@dimen/_13sdp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUpdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/update"
                android:clickable="true"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_18sdp"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@+id/lLItem"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:focusable="true" />
            <View
                android:layout_width="@dimen/_10sdp"
                android:layout_height="match_parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/delete"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/white"
                android:clickable="true"
                android:layout_weight="1"
                android:textSize="@dimen/_18sdp"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@+id/lLItem"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:focusable="true" />

        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>